# MAKERphone-Firmware

./: CHANGELOG.md  CMakeLists.txt  KNOWN_ISSUES.md  MAKERphone-Firmware.ino  README.md
.github/workflows/: build-mp24.yml  build.yml
docs/: CIRCUITOS_SHIM_PLAN.md  MAKERPHONE_ROADMAP.md  MP24_OPEN_HW_QUESTIONS.md  MP24_PORT_PLAN.md  MP24_PORT_ROADMAP.md  SESSION_CHECKPOINT.md
libraries/Chatter-Library/: library.properties
libraries/Chatter-Library/src/: Settings.h
libraries/Chatter-Library/src/Battery/: BatteryService.cpp
mp24/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
mp24/components/chatter_app/: CMakeLists.txt
mp24/components/chatter_app/screens/: AppStubFactory.cpp  HomeFactory.cpp  TestScreen.cpp  WelcomeFactory.cpp
mp24/components/chatter_app/shim/: Anchor.cpp  ClockSourceBridge.cpp  FSLVGLStub.cpp  InputChatterStub.cpp  InputLVGL.cpp  LoRaServiceStub.cpp  MP24Piezo.cpp  MessageServiceStub.cpp  ResourceManagerShim.cpp  SleepServiceStub.cpp  StorageStub.cpp
mp24/components/chatter_app/shim_includes/: RadioLib.h  arduino_glm_compat.h  glm.h
mp24/components/chatter_library/: CMakeLists.txt
mp24/components/circuitos/: CMakeLists.txt  Setup.hpp
mp24/components/circuitos/src/Support/: ContextTransition.h
mp24/components/circuitos/src/UI/: Element.h
mp24/components/circuitos_shim/: CMakeLists.txt  MP24Battery.cpp  MP24Chatter.cpp  MP24Display.cpp  MP24Input.cpp  MP24Sprite.cpp  circuitos_shim_stub.c
mp24/components/circuitos_shim/include/: Chatter.h  MP24Input.h  Pins.hpp  SD.h  TFT_eSPI.h  circuitos_shim.h
mp24/components/circuitos_shim/include/Display/: Display.h  GIFAnimatedSprite.h  Sprite.h
mp24/main/: CMakeLists.txt  app_main.c  app_main.cpp  idf_component.yml  lvgl_glue.c  lvgl_glue.h
mp24/main/hal/: audio_i2s.c  audio_i2s.h  audio_i2s2.c  audio_i2s2.h  aw9523b.c  aw9523b.h  battery.c  battery.h  buttons.h  calls.c  calls.h  clock_source.c  clock_source.h  display.c  display.h  i2c_bus.c  i2c_bus.h  input_keypad.c  input_keypad.h  modem.c  modem.h  piezo.c  piezo.h  pins.h  power.c  power.h  sms.c  sms.h  storage.c  storage.h  xl9555.c  xl9555.h
mp24/spiffs/: README.txt  hello.txt
src/: ChatterTheme.cpp  MAKERphoneConfig.h  MakerphonePalette.h  MakerphoneTheme.cpp  MakerphoneTheme.h
src/Elements/: ConvoMessage.cpp  ConvoMessage.h  IntroScreen.cpp  PhoneBatteryIcon.cpp  PhoneBatteryIcon.h  PhoneChargeBars.cpp  PhoneChargeBars.h  PhoneChargingOverlay.cpp  PhoneChargingOverlay.h  PhoneChatBubble.cpp  PhoneChatBubble.h  PhoneClockFace.cpp  PhoneClockFace.h  PhoneConfettiOverlay.cpp  PhoneConfettiOverlay.h  PhoneDialerKey.cpp  PhoneDialerKey.h  PhoneDialerPad.cpp  PhoneDialerPad.h  PhoneEnvelopeFly.cpp  PhoneEnvelopeFly.h  PhoneEqualizerVisualiser.cpp  PhoneEqualizerVisualiser.h  PhoneIconTile.cpp  PhoneIconTile.h  PhoneIdleHint.cpp  PhoneIdleHint.h  PhoneLockHint.cpp  PhoneLockHint.h  PhoneMenuGrid.cpp  PhoneMenuGrid.h  PhoneMessageRow.cpp  PhoneMessageRow.h  PhoneMissedCallFlash.cpp  PhoneMissedCallFlash.h  PhoneNotificationPreview.cpp  PhoneNotificationPreview.h  PhoneNotificationToast.cpp  PhoneNotificationToast.h  PhoneOperatorBanner.cpp  (+21 more)
src/Games/GameEngine/: Game.cpp  Game.h
src/Games/Invaders/: SpaceInvaders.cpp  SpaceInvaders.h
src/Games/Pong/: Bonk.cpp  Bonk.h
src/Games/Snake/: Snake.cpp  Snake.h
src/Games/Space/: SpaceRocks.cpp  SpaceRocks.h
src/Interface/: ConvoView.cpp  LVScreen.cpp  LVScreen.h  PhoneTransitions.cpp  PhoneTransitions.h
src/Modals/: PhoneBatteryLowModal.cpp  PhoneBatteryLowModal.h
src/Model/: PhoneContact.hpp
src/Screens/: ConvoScreen.cpp  ConvoScreen.h  InboxScreen.cpp  InboxScreen.h  LockScreen.cpp  LockScreen.h  Phone2048.cpp  Phone2048.h  PhoneAboutScreen.cpp  PhoneAboutScreen.h  PhoneAccentScreen.cpp  PhoneAccentScreen.h  PhoneActiveCall.cpp  PhoneActiveCall.h  PhoneAirHockey.cpp  PhoneAirHockey.h  PhoneAlarmClock.cpp  PhoneAlarmClock.h  PhoneAlarmTonePicker.cpp  PhoneAlarmTonePicker.h  PhoneAppStubScreen.cpp  PhoneAppStubScreen.h  PhoneAsciiArt.cpp  PhoneAsciiArt.h  PhoneAvatarEditor.cpp  PhoneAvatarEditor.h  PhoneBantumi.cpp  PhoneBantumi.h  PhoneBeatMaker.cpp  PhoneBeatMaker.h  PhoneBirthdayReminders.cpp  PhoneBirthdayReminders.h  PhoneBootSplash.cpp  PhoneBootSplash.h  PhoneBounce.cpp  PhoneBounce.h  PhoneBrickBreaker.cpp  PhoneBrickBreaker.h  PhoneBrightnessScreen.cpp  PhoneBrightnessScreen.h  (+181 more)
src/Services/: BuzzerService.cpp  MessageService.cpp  MissedCallLog.cpp  MissedCallLog.h  PhoneAlarmService.cpp  PhoneAlarmService.h  PhoneAlarmTone.cpp  PhoneAlarmTone.h  PhoneBeatMakerStorage.cpp  PhoneBeatMakerStorage.h  PhoneCallHistoryStorage.cpp  PhoneCallHistoryStorage.h  PhoneCallService.cpp  PhoneCallService.h  PhoneChargeChime.cpp  PhoneChargeChime.h  PhoneClock.cpp  PhoneClock.h  PhoneComposerPlayback.cpp  PhoneComposerPlayback.h  PhoneComposerRtttl.cpp  PhoneComposerRtttl.h  PhoneComposerStorage.cpp  PhoneComposerStorage.h  PhoneContactRingtone.cpp  PhoneContactRingtone.h  PhoneDeliveredChime.cpp  PhoneDeliveredChime.h  PhoneIdleDim.cpp  PhoneIdleDim.h  PhoneKonamiCode.cpp  PhoneKonamiCode.h  PhoneLvglCost.cpp  PhoneLvglCost.h  PhoneMusicLibrary.cpp  PhoneMusicLibrary.h  PhoneMusicPlaylists.cpp  PhoneMusicPlaylists.h  PhoneOwnerEmoji.cpp  PhoneOwnerEmoji.h  (+17 more)
src/Storage/: PhoneContacts.cpp  PhoneContacts.h  Repo.cpp  Storage.cpp  Storage.h
